--- a/typescript-todolist/src/index.css
+++ b/typescript-todolist/src/index.css
@@ -4,6 +4,15 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
+@keyframes spin {
+  from {
+      transform:rotate(0deg);
+  }
+  to {
+      transform:rotate(360deg);
+  }
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -74,6 +83,21 @@ code {
   overflow: hidden;
 }
 
+.ellipse-2-spin {
+  width: 250px;
+  height: 250px;
+  overflow: hidden;
+  border-radius: 500px;
+  z-index: 2;
+  position: absolute;
+  background-size: cover;
+  animation-name: spin;
+  animation-duration: 5000ms;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear; 
+  animation-play-state: running;
+}
+
 .ellipse-2 {
   width: 250px;
   height: 250px;
@@ -82,6 +106,11 @@ code {
   z-index: 2;
   position: absolute;
   background-size: cover;
+  animation-name: spin;
+  animation-duration: 5000ms;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear; 
+  animation-play-state: paused;
 }
 
 .songinfo-container {
@@ -203,3 +232,4 @@ input[type="range"]:focus::-ms-fill-upper {
 .action-button{
   cursor: pointer;
 }
+
